@@ -12,6 +12,7 @@
 * Wompi: cast error messages to JSON [therufs] #4186
 * NMI: Omit initial_transaction_id for CIT [aenand] #4189
 * Priority: Support Priority Payment Systems gateway [jessiagee] #4166
+* GlobalCollect: Support for Lodging Data [naashton] #4190
 
 == Version 1.124.0 (October 28th, 2021)
 * Worldpay: Add Support for Submerchant Data on Worldpay [almalee24] #4147
